stmMX/.metadata/.plugins/org.eclipse.cdt.ui/blinkG.build.log
16:00:24 **** Incremental Build of configuration Debug for project blinkG ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:132:9: warning: implicit declaration of function 'delay' [-Wimplicit-function-declaration]
  132 |         delay(250);
      |         ^~~~~
../Core/Src/main.c:202:13: error: invalid storage class for function 'MX_ETH_Init'
  202 | static void MX_ETH_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:251:13: error: invalid storage class for function 'MX_USART3_UART_Init'
  251 | static void MX_USART3_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:286:13: error: invalid storage class for function 'MX_USB_OTG_FS_PCD_Init'
  286 | static void MX_USB_OTG_FS_PCD_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:321:13: error: invalid storage class for function 'MX_GPIO_Init'
  321 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:390:1: error: expected declaration or statement at end of input
  390 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:75:13: warning: 'MX_GPIO_Init' used but never defined
   75 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:76:13: warning: 'MX_ETH_Init' used but never defined
   76 | static void MX_ETH_Init(void);
      |             ^~~~~~~~~~~
../Core/Src/main.c:77:13: warning: 'MX_USART3_UART_Init' used but never defined
   77 | static void MX_USART3_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:78:13: warning: 'MX_USB_OTG_FS_PCD_Init' used but never defined
   78 | static void MX_USB_OTG_FS_PCD_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:381:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  381 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:321:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  321 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:286:13: warning: 'MX_USB_OTG_FS_PCD_Init' defined but not used [-Wunused-function]
  286 | static void MX_USB_OTG_FS_PCD_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:251:13: warning: 'MX_USART3_UART_Init' defined but not used [-Wunused-function]
  251 | static void MX_USART3_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:202:13: warning: 'MX_ETH_Init' defined but not used [-Wunused-function]
  202 | static void MX_ETH_Init(void)
      |             ^~~~~~~~~~~
../Core/Src/main.c:144:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  144 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

16:00:24 Build Failed. 6 errors, 11 warnings. (took 248ms)

